--- a/supervisord.conf
+++ b/supervisord.conf
@@ -3,19 +3,26 @@ nodaemon=true
 pidfile=/tmp/supervisord.pid
 logfile=/dev/fd/1
 logfile_maxbytes=0
-user=root
 
 [program:x11]
 priority=0
-command=/usr/bin/Xtigervnc -desktop "noVNC" -localhost -rfbport 5900 -SecurityTypes None -AlwaysShared -AcceptKeyEvents -AcceptPointerEvents -AcceptSetDesktopSize -SendCutText -AcceptCutText :0
+command=/usr/bin/Xtigervnc -desktop "Tint2" -localhost -rfbport 5900 -SecurityTypes None -AlwaysShared -AcceptKeyEvents -AcceptPointerEvents -AcceptSetDesktopSize -SendCutText -AcceptCutText :0
+autorestart=true
+stdout_logfile=/dev/fd/1
+stdout_logfile_maxbytes=0
+redirect_stderr=true
+
+[program:easy-novnc]
+priority=0
+command=/usr/local/bin/easy-novnc --addr :8080 --host localhost --port 5900 --novnc-params "resize=off"
 autorestart=true
 stdout_logfile=/dev/fd/1
 stdout_logfile_maxbytes=0
 redirect_stderr=true
 
 [program:openbox]
-priority=2
-command=/usr/bin/openbox-session
+priority=1
+command=/usr/bin/openbox
 environment=DISPLAY=:0
 autorestart=true
 stdout_logfile=/dev/fd/1
@@ -23,10 +30,12 @@ stdout_logfile_maxbytes=0
 redirect_stderr=true
 
 [program:tint2]
-priority=3
-command=tint2
+priority=1
 environment=DISPLAY=:0
+command=tint2
 autorestart=true
 stdout_logfile=/dev/fd/1
 stdout_logfile_maxbytes=0
 redirect_stderr=true
+
+
