--- a/supervisord.conf
+++ b/supervisord.conf
@@ -10,7 +10,7 @@ redirect_stderr=true
 
 [program:easy-novnc]
 priority=0
-command=/usr/local/bin/easy-novnc --addr :8080 --host localhost --port 5900 --novnc-params "resize=off"
+command=/usr/local/bin/easy-novnc --addr :8080 --host localhost --port 5900 --novnc-params "resize=scale"
 autorestart=true
 redirect_stderr=true
 
