--- a/supervisord.conf
+++ b/supervisord.conf
@@ -10,7 +10,7 @@ redirect_stderr=true
 
 [program:easy-novnc]
 priority=0
-command=/usr/local/bin/easy-novnc --addr :8888 --host localhost --port 5960 --novnc-params "resize=scale"
+command=/usr/local/bin/easy-novnc --addr :8888 --host localhost --port 5960 --novnc-params "resize=remote"
 autorestart=true
 redirect_stderr=true
 
